src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Baseline_Target_CPC__c</fullName>
        <label>Baseline Target CPC</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Baseline_Target__c</fullName>
        <description>Used with the new commission program 1/27/2015,  this number indicates the baseline target,  from which all other tiers are calculated</description>
        <label>Baseline Target TCR</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a user will have access to the Bulk Printing Queue or not.</description>
        <label>Bulk Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Center_Team__c</fullName>
        <description>This is a field to store the call center team assignments for users. Will ideally be administered by the call center supervisors.</description>
        <label>Call Center Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IMP - MM</fullName>
                </value>
                <value>
                    <fullName>Confirmation</fullName>
                </value>
                <value>
                    <fullName>IMP - MV</fullName>
                </value>
                <value>
                    <fullName>QAM - SM</fullName>
                </value>
                <value>
                    <fullName>IMP - FN</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Implant Consultant</fullName>
                </value>
                <value>
                    <fullName>Imp - IMC API</fullName>
                </value>
                <value>
                    <fullName>Imp - IMC Mansfield</fullName>
                </value>
                <value>
                    <fullName>Imp - IMC NewCastle</fullName>
                </value>
                <value>
                    <fullName>Imp - Mean Green</fullName>
                </value>
                <value>
                    <fullName>Imp - Tooth Avengers</fullName>
                </value>
                <value>
                    <fullName>Online Sched</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Web To Lead</fullName>
                </value>
                <value>
                    <fullName>IMP - KV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Center_Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the user is a center administrator. This field is used in the Sales Dashboard to allow a center admin to view the numbers for PEC assigned to the same center.</description>
        <label>Center Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Center_PEC__c</fullName>
        <description>Stores the ID for a center_information__c record. I&apos;m using this field to tie users to centers for the sales dashboard and sales goal project. Blanks will not be PEC/DEC&apos;s and travelers will go to unknown.</description>
        <label>Center PEC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_Calendar__c</fullName>
        <description>Clinic Calendar this user will default to.</description>
        <label>Clinic Calendar</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Atlanta Alpharetta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Boston Woburn</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Chicago Deerfield/Northbrook</fullName>
                </value>
                <value>
                    <fullName>Chicago Downers Grove</fullName>
                </value>
                <value>
                    <fullName>Chicago Evanston</fullName>
                </value>
                <value>
                    <fullName>Chicago Naperville</fullName>
                </value>
                <value>
                    <fullName>Chicago Schaumburg</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Colorado Springs</fullName>
                </value>
                <value>
                    <fullName>Columbia</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Dallas Arlington</fullName>
                </value>
                <value>
                    <fullName>Dallas Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit Southfield</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Houston Woodlands</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Orange County</fullName>
                </value>
                <value>
                    <fullName>Los Angeles Torrence</fullName>
                </value>
                <value>
                    <fullName>Los Angeles West Covina</fullName>
                </value>
                <value>
                    <fullName>Metro Detroit</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Miami Fort Lauderdale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collections_Threshold__c</fullName>
        <label>Collections Threshold</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please enter account creation and deactivation information: Request by. Completed by. Completed date.</inlineHelpText>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Screenpop__c</fullName>
        <label>Custom Screenpop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Default_Calendar_Color_View__c</fullName>
        <label>Default Calendar Color View</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Calendar_Room__c</fullName>
        <label>Default Calendar Room</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Calendar_View__c</fullName>
        <label>Default Calendar View</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <formula>Contact.Account.Dental_Practice_Partner__c</formula>
        <label>Dental Practice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_Scorecard_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Doctor Scorecard Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doctor_Suffix__c</fullName>
        <label>Doctor Suffix</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoseSpot_User_ID__c</fullName>
        <label>DoseSpot User ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Patient_Quick_Search__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Patient Quick Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Deploy_Date__c</fullName>
        <description>This is the date the PEC was effectively deployed in the field. This is a data point used in on-boarding performance metrics.</description>
        <label>Field Deploy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Type__c</fullName>
        <label>Goal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InContact_Agent_Number__c</fullName>
        <label>InContact Agent Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Calendar_Date__c</fullName>
        <label>Last Calendar Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>National_Provider_Identifier__c</fullName>
        <label>National Provider Identifier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_End_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Intended only for doctors - users with the &apos;Clinical Doctor&apos; Profile) Denotes that doctor&apos;s appears on the end tags of our creative material (and therefore must approve it)</description>
        <label>On End Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PaychexID__c</fullName>
        <description>This is the Paychex Payment ID. This was added by the analytics team to help simplify the bonus calculation process for PECs specifically.</description>
        <label>PaychexID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice_Privileges_Provider__c</fullName>
        <label>Practice Privileges Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ClearViewTV</fullName>
                </value>
                <value>
                    <fullName>ClearTrain</fullName>
                </value>
                <value>
                    <fullName>ClearWeb</fullName>
                </value>
                <value>
                    <fullName>ClearVantage</fullName>
                </value>
                <value>
                    <fullName>ClearConnect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualify_Scorecards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualify Scorecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_PEC__c</fullName>
        <description>Sales Region the PEC is assigned to.</description>
        <label>Region_PEC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Traveler__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A Regional Traveler is a PEC who may consult in any Centers of a region. Within Salesforce, this is accomplished by assigning the PEC to any center in the PEC&apos;s region AND checking this box. Ultimately, this is used to disallow the assignment of consults to PEC&apos;s who do not work in the center where the consult occurred.</description>
        <label>Regional Traveler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove_from_Comission_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this will keep someone from appearing on the comission report that payroll pulls</description>
        <label>Remove from Comission Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gives the user the ability to reset patient status on the clinic calendar,  regardless of other settings.</description>
        <label>Reset Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Query_Result__c</fullName>
        <label>SFDC Query Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>15</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Sales_Goal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Monthly sales target for PECs</description>
        <label>Sales Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 1 Floor</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tier 2 Floor</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Floor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quarter Target</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traveler_Until__c</fullName>
        <description>Travelers&apos; records (Consults and Prostho Exams) are reported by PEC (as a summary) as well as by the Center Location where the work is performed.  All records through to the end of the month when the PEC stops traveling are included as part of the summary.</description>
        <inlineHelpText>The month end date when this PEC is no longer traveling; if travel ends on 8/15/2010 for example, enter 8/31/2010.</inlineHelpText>
        <label>Traveler Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UltiPro_Id__c</fullName>
        <description>This is the UltiPro Payment ID. This was requested by the Data Analytics Team to help simplify the bonus calculation process, for PEC&apos;s specifically.</description>
        <label>UltiPro_Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License_Reporting_Lookup__c</fullName>
        <description>Used to report on user license usage.</description>
        <formula>Profile.UserLicense.Name</formula>
        <label>User License Reporting Lookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <description>User Role, to pass into analytic snapshots</description>
        <formula>UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_ET_Page__c</fullName>
        <label>Default Marketing Cloud Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Default_MID__c</fullName>
        <label>Default MID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetForAppExchangeUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Cloud for AppExchange User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTargetUsername__c</fullName>
        <label>Marketing Cloud Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExactTarget_OAuth_Token__c</fullName>
        <label>@deprecated</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetAdmin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ValidExactTargetUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Marketing Cloud User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>icAgentConsole__incCustomScreenpop__c</fullName>
        <description>Value of this field to be updated from inContact Agent Console app, use this field to get the value of inContact script variables.</description>
        <label>inContact Custom Screenpop</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>ActiveTravelers</fullName>
        <columns>FULL_NAME</columns>
        <columns>Traveler_Until__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Traveler_Until__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Active Travelers</label>
    </listViews>
    <listViews>
        <fullName>Active_Users_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Clinic_Calendar__c</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users Only</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Traveler_Until__c</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Force.com Clinic Calendar</value>
        </filters>
        <label>Force.com Clinic Calendar</label>
    </listViews>
    <listViews>
        <fullName>DIC</fullName>
        <columns>FULL_NAME</columns>
        <columns>InContact_Agent_Number__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>Call_Center_Team__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Dental Implant Consultant</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Call Center Agent Infocision,Limited System Administrator</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>Marketing Administrator w/o Delete,Call Center - Supervisor Infocision</value>
        </filters>
        <label>DIC</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Users_Only</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users Only</label>
    </listViews>
    <listViews>
        <fullName>Users_Last_Login</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Users Last Login</label>
        <sharedTo>
            <role>COO</role>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>